🐛 fix: Not display setting for enable outline on mobile devices

--- a/src/SwashbucklerDiary.Rcl/wwwroot/json/app-features/app-features.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/json/app-features/app-features.json
@@ -200,8 +200,7 @@
     "Name": "Display outline",
     "Icon": "format_list_bulleted",
     "Path": "Setting / Diary / Outline / Display outline",
-    "Href": "outlineSetting",
-    "HideBreakpoints": [ "Xs", "Sm" ]
+    "Href": "outlineSetting"
   },
   {
     "Name": "Position on the right",
