🆕 feat: Diary card automatic title

--- a/src/SwashbucklerDiary.Rcl/wwwroot/json/app-features/app-features.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/json/app-features/app-features.json
@@ -305,6 +305,12 @@
     "Href": "diaryCardSetting"
   },
   {
+    "Name": "Auto title",
+    "Icon": "title",
+    "Path": "Setting / Diary card / Auto title",
+    "Href": "diaryCardSetting"
+  },
+  {
     "Name": "Markdown",
     "Icon": "markdown",
     "Path": "Setting / Diary card / Markdown",
