--- a/src/SwashbucklerDiary.Maui/Platforms/MacCatalyst/Info.plist
+++ b/src/SwashbucklerDiary.Maui/Platforms/MacCatalyst/Info.plist
@@ -1,75 +1,80 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<!-- The Mac App Store requires you specify if the app uses encryption. -->
-	<!-- Please consult https://developer.apple.com/documentation/bundleresources/information_property_list/itsappusesnonexemptencryption -->
-	<!-- <key>ITSAppUsesNonExemptEncryption</key> -->
-	<!-- Please indicate <true/> or <false/> here. -->
+	<dict>
+		<!-- The Mac App Store requires you specify if the app uses encryption. -->
+		<!-- Please consult https://developer.apple.com/documentation/bundleresources/information_property_list/itsappusesnonexemptencryption -->
+		<!-- <key>ITSAppUsesNonExemptEncryption</key> -->
+		<!-- Please indicate <true/> or <false/> here. -->
 
-	<!-- Specify the category for your app here. -->
-	<!-- Please consult https://developer.apple.com/documentation/bundleresources/information_property_list/lsapplicationcategorytype -->
-	<!-- <key>LSApplicationCategoryType</key> -->
-	<!-- <string>public.app-category.YOUR-CATEGORY-HERE</string> -->
-    <key>UIDeviceFamily</key>
-    <array>
-        <integer>1</integer>
-		<integer>2</integer>
-		<integer>6</integer>
-    </array>
-    <key>UIRequiredDeviceCapabilities</key>
-    <array>
-        <string>arm64</string>
-    </array>
-    <key>UISupportedInterfaceOrientations</key>
-    <array>
-        <string>UIInterfaceOrientationPortrait</string>
-        <string>UIInterfaceOrientationLandscapeLeft</string>
-        <string>UIInterfaceOrientationLandscapeRight</string>
-    </array>
-    <key>UISupportedInterfaceOrientations~ipad</key>
-    <array>
-        <string>UIInterfaceOrientationPortrait</string>
-        <string>UIInterfaceOrientationPortraitUpsideDown</string>
-        <string>UIInterfaceOrientationLandscapeLeft</string>
-        <string>UIInterfaceOrientationLandscapeRight</string>
-    </array>
-    <key>XSAppIconAssets</key>
-    <string>Assets.xcassets/appicon.appiconset</string>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>This app needs access to the photo gallery to save photos and videos.</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>This app needs access to the photo gallery to save photos and videos.</string>
-	<key>NSCameraUsageDescription</key>
-	<string>This app needs access to the camera to take photos.</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>This app needs access to microphone for taking videos.</string>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>This app needs access to the photo gallery for picking photos and videos.</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>This app needs access to photos gallery for picking photos and videos.</string>
-	<key>LSApplicationQueriesSchemes</key>
-	<array>
-		<string>mailto</string>
-		<string>itms-apps</string>
-	</array>
-	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>en-US</string>
-	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleURLName</key>
-			<string>swashbucklerdiary</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
+		<!-- Specify the category for your app here. -->
+		<!-- Please consult https://developer.apple.com/documentation/bundleresources/information_property_list/lsapplicationcategorytype -->
+		<!-- <key>LSApplicationCategoryType</key> -->
+		<!-- <string>public.app-category.YOUR-CATEGORY-HERE</string> -->
+		<key>UIDeviceFamily</key>
+		<array>
+			<integer>1</integer>
+			<integer>2</integer>
+			<integer>6</integer>
+		</array>
+		<key>UIRequiredDeviceCapabilities</key>
+		<array>
+			<string>arm64</string>
+		</array>
+		<key>UISupportedInterfaceOrientations</key>
+		<array>
+			<string>UIInterfaceOrientationPortrait</string>
+			<string>UIInterfaceOrientationLandscapeLeft</string>
+			<string>UIInterfaceOrientationLandscapeRight</string>
+		</array>
+		<key>UISupportedInterfaceOrientations~ipad</key>
+		<array>
+			<string>UIInterfaceOrientationPortrait</string>
+			<string>UIInterfaceOrientationPortraitUpsideDown</string>
+			<string>UIInterfaceOrientationLandscapeLeft</string>
+			<string>UIInterfaceOrientationLandscapeRight</string>
+		</array>
+		<key>XSAppIconAssets</key>
+		<string>Assets.xcassets/appicon.appiconset</string>
+		<key>NSPhotoLibraryAddUsageDescription</key>
+		<string>This app needs access to the photo gallery to save photos and videos.</string>
+		<key>NSPhotoLibraryUsageDescription</key>
+		<string>This app needs access to the photo gallery to save photos and videos.</string>
+		<key>NSCameraUsageDescription</key>
+		<string>This app needs access to the camera to take photos.</string>
+		<key>NSMicrophoneUsageDescription</key>
+		<string>This app needs access to microphone for taking videos.</string>
+		<key>NSPhotoLibraryAddUsageDescription</key>
+		<string>This app needs access to the photo gallery for picking photos and videos.</string>
+		<key>NSPhotoLibraryUsageDescription</key>
+		<string>This app needs access to photos gallery for picking photos and videos.</string>
+		<key>LSApplicationQueriesSchemes</key>
+		<array>
+			<string>mailto</string>
+			<string>itms-apps</string>
+		</array>
+		<key>UIViewControllerBasedStatusBarAppearance</key>
+		<false/>
+		<key>CFBundleDevelopmentRegion</key>
+		<string>en-US</string>
+		<key>CFBundleURLTypes</key>
+		<array>
+			<dict>
+				<key>CFBundleURLName</key>
 				<string>swashbucklerdiary</string>
-				<string>xiakeriji</string>
-			</array>
+				<key>CFBundleURLSchemes</key>
+				<array>
+					<string>swashbucklerdiary</string>
+					<string>xiakeriji</string>
+				</array>
+			</dict>
+		</array>
+		<key>NSFaceIDUsageDescription</key>
+		<string>Need your face to unlock! </string>
+		<key>NSAppTransportSecurity</key>
+		<dict>
+			<key>NSAllowsArbitraryLoads</key>
+			<true/>
 		</dict>
-	</array>
-	<key>NSFaceIDUsageDescription</key>
-	<string>Need your face to unlock! </string>
-</dict>
+	</dict>
 </plist>
