--- a/src/SwashbucklerDiary.WebAssembly/SwashbucklerDiary.WebAssembly.csproj
+++ b/src/SwashbucklerDiary.WebAssembly/SwashbucklerDiary.WebAssembly.csproj
@@ -8,7 +8,8 @@
 		<Version>1.0.0</Version>
 		<WasmBuildNative>true</WasmBuildNative>
 		<NullabilityInfoContextSupport>true</NullabilityInfoContextSupport>
-
+		<BlazorWebAssemblyLoadAllGlobalizationData>true</BlazorWebAssemblyLoadAllGlobalizationData>
+		
 		<!-- workaround for publish -->
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		<EmccExtraLDFlags>-s WARN_ON_UNDEFINED_SYMBOLS=0 -lidbfs.js</EmccExtraLDFlags>
