⚡️ improve: Apply .net10 Client-side fingerprinting on Blazor WebAssembly

--- a/src/SwashbucklerDiary.WebAssembly/SwashbucklerDiary.WebAssembly.csproj
+++ b/src/SwashbucklerDiary.WebAssembly/SwashbucklerDiary.WebAssembly.csproj
@@ -9,6 +9,7 @@
 		<WasmBuildNative>true</WasmBuildNative>
 		<NullabilityInfoContextSupport>true</NullabilityInfoContextSupport>
 		<BlazorWebAssemblyLoadAllGlobalizationData>true</BlazorWebAssemblyLoadAllGlobalizationData>
+		<OverrideHtmlAssetPlaceholders>true</OverrideHtmlAssetPlaceholders>
 		
 		<!-- workaround for publish -->
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
